# redstone

./: .gitignore  Cargo.toml  README.md  install-linux.sh
.github/workflows/: ci.yml
.vim/: coc-settings.json
redstone_cli/: .gitignore  Cargo.toml
redstone_cli/src/: main.rs  utils.rs
redstone_cli/src/cli/: auth.rs  clone.rs  mod.rs  models.rs  progress_bar.rs  pull.rs  push.rs  server_config.rs  set_server_address.rs  status.rs  track.rs
redstone_cli/src/ipc/: socket.rs
redstone_common/: Cargo.toml
redstone_common/src/: config.rs  constants.rs  lib.rs  util.rs
redstone_common/src/api/: jar.rs  mod.rs
redstone_common/src/ipc/: mod.rs
redstone_common/src/model/: api.rs  backup.rs  config.rs  fs_tree.rs  ipc.rs  mod.rs  socket.rs  tcp.rs  track.rs
redstone_common/src/model/ipc/: clone.rs  mod.rs  pull.rs  push.rs  track.rs
redstone_common/src/web/: mod.rs  socket.rs  tcp.rs
redstone_common/src/web/api/: jar.rs  mod.rs
redstone_common/test-data/: hello.ex
redstone_common/test-data/other_folder/: other_file.hs
redstone_service/: Cargo.toml
redstone_service/src/: main.rs  service.rs
redstone_service/src/api/: update.rs
redstone_service/src/backup/: file_transfer.rs
redstone_service/src/ipc/: clone.rs  mod.rs  pull.rs  push.rs  socket_loop.rs  track.rs
redstone_service/src/scheduler/: mod.rs
release/linux/: redstone.service
