[package]
name = "redstone_cli"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
########
redstone_common = { path = "../redstone_common" }
########
interprocess = "1.1.1"
ansi_term = "0.12.1"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
rpassword = "6.0.1"

[dev-dependencies]
redstone_common = { path = "../redstone_common", features = ["testing"] }
httpmock = "0.6"
