[package]
name = "redstone_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.18"
serde = {version = "1.0.140" , features = ["derive"]} 
serde_json = "1.0.85"
bincode = "1.3.3"
dirs = "4.0.0"
sha2 = "0.10.2"
data-encoding = "2.3.2"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
tokio = { version = "1.19.2"}
