[package]
name = "redstone_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redstone_common = {path = "../redstone_common"}
########
interprocess = "1.1.1"
tokio = { version = "1.19.2", features = ["full"] }
serde = {version = "1.0.140" , features = ["derive"]} 
bincode = "1.3.3"
cron = "0.11.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
